@@ -1,3 +1,4 @@
+XX/XX/18 (TRUST)  New keyword : Add flux_surfacique_bords option to Morceau_equation keyword to post-process surfacic fluxes on boundaries
 --------------------------------------------------------------------------------------------------
 Release notes version 1.7.8_beta : Enhancements, modifications and corrected bugs since version 1.7.7 :
 --------------------------------------------------------------------------------------------------
